fixed the magnifier.png file for internet explorer. drawback of user alphaimageloader filter is that the image can't be positioned, though, so the magnifier is a few pixels too high.
git-svn-id: http://activescaffold.googlecode.com/svn/trunk@31 561dde7e-7729-0410-be8e-ef83869d6c7d

--- a/frontends/default/stylesheets/stylesheet-ie.css
+++ b/frontends/default/stylesheets/stylesheet-ie.css
@@ -8,3 +8,8 @@ zoom: 1;
 * html .active-scaffold td .messages-container {
 border-top: solid 1px #DAFFCD;
 }
+
+.active-scaffold-header div.actions a.show_search {
+background-image: none;
+filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/images/active_scaffold/default/magnifier.png', sizingMethod='crop');
+}
